# Laliga-Prediction

./: .gitignore  Makefile  README.md  docker-compose.yml  predict_laliga.py  pyproject.toml  requirements.txt  train_laliga_model.py
.github/workflows/: model-pipeline.yml
backend/: Dockerfile  README.md  requirements.txt
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/core/: config.py  database.py  logging.py  validation.py
backend/app/models/: database.py  models.py  schemas.py
backend/app/services/: __init__.py  cache_service.py  csv_team_service.py  data_service.py  model_service.py  prediction_service.py  team_analytics_service.py  team_service.py
backend/app/utils/: __init__.py  dixon_coles.py  feature_engineering.py  helpers.py  validation.py
backend/scripts/: add_is_active_column.sql  init_db.sql  migrate_add_is_active.py
backend/tests/: conftest.py  test_api.py  test_dixon_coles.py  test_services.py  test_utils.py
data/: season-2526.csv  upcoming-fixtures-2526.csv
docs/: API_DOCUMENTATION.md  ML_PIPELINE.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  (+2 more)
k8s/: README.md  backend.yaml  cleanup.sh  deploy.sh  frontend.yaml  ingress.yaml  namespace.yaml  postgres.yaml  redis.yaml
mlops/: deploy.py  model_registry.py  monitoring.py
src/laliga_pipeline/: backtest.py  cli.py  config.py  data_schema.py  dc_model.py  features.py  loaders.py  logging_conf.py  model_cache.py  names.py  smart_model.py
tests/: conftest.py  test_backtest.py  test_dc_model.py  test_features.py  test_schema.py
(+37 files in other folders)
