[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "laliga-pipeline"
version = "0.1.0"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["laliga_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
